--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "reactportfolio.io",
-  "homepage": "https://andymmunro.github.io/reactportfolio.io",
+  "homepage": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
-    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
